--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+clap = "2.31.2"
+version_check = "0.9"
+
 [dependencies]
+anyhow = "1.0"
+
+[dependencies.clap]
+version = "2.31.2"
+features = ["suggestions", "color", "wrap_help"]
