--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ version_check = "0.9"
 
 [dependencies]
 anyhow = "1.0"
+reqwest = { version = "0.11", features = ["blocking"] }
 
 [dependencies.clap]
 version = "2.31.2"
 features = ["suggestions", "color", "wrap_help"]
+
