--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,8 @@ version = "0.1.0"
 authors = ["nakabonne <ryo@nakao.dev>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[build-dependencies]
-clap = "2.31.2"
-version_check = "0.9"
-
 [dependencies]
 anyhow = "1.0"
+clap = "3.0.0-beta.2"
 reqwest = { version = "0.11", features = ["blocking"] }
-
-[dependencies.clap]
-version = "2.31.2"
-features = ["suggestions", "color", "wrap_help"]
 
