--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 anyhow = "1.0"
 clap = "3.0.0-beta.2"
 reqwest = { version = "0.11", features = ["blocking"] }
-
+simple-server = "0.4.0"
