--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ anyhow = "1.0"
 clap = "3.0.0-beta.2"
 reqwest = { version = "0.11", features = ["blocking"] }
 simple-server = "0.4.0"
+bytes = "1"
+tokio = { version = "1", features = ["full"] }
+http = "0.2.3"
